--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,19 @@
 *.pdb
 *.dll
 *.dll
+*.pdb
+*.pdb
+*.dll
+.vs/NilsenRaceFormulaReports/v15/.suo
+*.lock
+*.ide
+*.ide-shm
+*.ide-wal
+*.dll
+*.dll
+*.cache
+*.dll
+*.cache
+*.exe
+RacesCSVToExcel_1_0/bin/Debug/NilsenRaceFormulaReports.application
+*.manifest
