--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ RacesCSVToExcel_1_0/bin/Debug/NilsenRaceFormulaReports.application
 .vs/NilsenRaceFormulaReports/DesignTimeBuild/.dtbcache
 RacesCSVToExcel_1_0/obj/x86/Release/NilsenRaceFormulaReports.csproj.ResolveComReference.cache
 RacesCSVToExcel_1_0/obj/x86/Release/NilsenRaceFormulaReports.csproj.ResolveComReference.cache
+bin/
+obj/
